[tool.poetry]
name = "awesome"
version = "0.1.0"
description = ""
authors = ["Tang Ziya <tcztzy@gmail.com>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
